working shadow mapping... wohooooooo

--- a/src/lab lighting.vcxproj
+++ b/src/lab lighting.vcxproj
@@ -38,6 +38,8 @@
   <ItemGroup>
     <None Include="..\resources\shader_fragment.glsl" />
     <None Include="..\resources\shader_vertex.glsl" />
+    <None Include="..\resources\shadow_frag.glsl" />
+    <None Include="..\resources\shadow_vert.glsl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
