--- a/src/lab lighting.vcxproj.filters
+++ b/src/lab lighting.vcxproj.filters
@@ -27,5 +27,7 @@
   <ItemGroup>
     <None Include="..\resources\shader_fragment.glsl" />
     <None Include="..\resources\shader_vertex.glsl" />
+    <None Include="..\resources\shadow_frag.glsl" />
+    <None Include="..\resources\shadow_vert.glsl" />
   </ItemGroup>
 </Project>
